--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,9 +1,9 @@
-FROM golang:1.23 AS build
+FROM --platform=linux/arm64 golang:1.23 AS build
 WORKDIR /go/src/clean-serverless-book-sample
 COPY . /go/src/clean-serverless-book-sample
 RUN scripts/build-handlers.sh
 
 
-FROM public.ecr.aws/lambda/provided:al2023 AS api
+FROM --platform=linux/arm64 public.ecr.aws/lambda/provided:al2023 AS api
 COPY --from=build /go/src/clean-serverless-book-sample/adapter/handlers/api/main ./main
 ENTRYPOINT [ "./main" ]
