✨ エンドポイントを追加

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 DYNAMO_TABLE_NAME=ResourceTable
 DYNAMO_PK_NAME=PK
 DYNAMO_SK_NAME=SK
+DYNAMO_LOCAL_ENDPOINT=https://540576edz9.execute-api.ap-northeast-1.amazonaws.com/dev
