S3 イベント通知に対応

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -7,3 +7,7 @@ RUN scripts/build-handlers.sh
 FROM --platform=linux/arm64 public.ecr.aws/lambda/provided:al2023 AS api
 COPY --from=build /go/src/clean-serverless-book-sample/adapter/handlers/api/main ./main
 ENTRYPOINT [ "./main" ]
+
+FROM --platform=linux/arm64 public.ecr.aws/lambda/provided:al2023 AS s3event
+COPY --from=build /go/src/clean-serverless-book-sample/adapter/handlers/s3event/main ./main
+ENTRYPOINT [ "./main" ]
