add event bridge trigger

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -11,3 +11,7 @@ ENTRYPOINT [ "./main" ]
 FROM --platform=linux/arm64 public.ecr.aws/lambda/provided:al2023 AS s3event
 COPY --from=build /go/src/clean-serverless-book-sample/adapter/handlers/s3event/main ./main
 ENTRYPOINT [ "./main" ]
+
+FROM --platform=linux/arm64 public.ecr.aws/lambda/provided:al2023 AS schedule
+COPY --from=build /go/src/clean-serverless-book-sample/adapter/handlers/schedule/main ./main
+ENTRYPOINT [ "./main" ]
